Sat Oct  4 08:23:48 2014  Zachary Scott  <e@zzak.io>

	* ext/openssl/ossl_rand.c: Use rb_define_module_function instead of
	  macro. [Fixes GH-686] https://github.com/ruby/ruby/pull/686

Sat Oct  4 06:04:56 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole_method.c(olemethod_set_member): remove
	  redundant NULL check.
	* ext/win32ole/win32ole_type.c(oletype_set_member): ditto.

Sat Oct  4 00:25:04 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: removed needless preparation for gcc.

Fri Oct  3 23:41:20 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: enabled gcc build with osx on travis.

Fri Oct  3 23:22:23 2014  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* template/fake.rb.in: fix make install failure due to MSYS path
	  with mingw on MSYS environment.
	  [ruby-core:64965] [Bug #10230]

Fri Oct  3 21:02:32 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_io.rb (TestIO#test_advise): avoid to infinite loop.

Fri Oct  3 19:26:01 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: enabled test results of linux.

Fri Oct  3 18:52:16 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/ruby/test_io.rb (TestIO#test_advise): added workaround of fadvise(2)
	  with tmpfs and old linux kernel. [ruby-core:65355][Bug #10313]

Fri Oct  3 18:22:45 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* .travis.yml: Disabled to generate document on travis.
	  Reduce test running time.

Fri Oct  3 12:42:15 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Add hstack & vstack methods.
	  Based on a patch by creasywuqiong. [Fix GH-344]

Fri Oct  3 12:37:48 2014  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb: Fix Matrix.rows copy bug.
	  Patch by Arron Mabrey. [Fix GH-707]

Fri Oct  3 06:06:28 2014  Eric Wong  <e@80x24.org>

	* st.c (next_pow2): new function (from old bignum.c)
	  (new_size): use next_pow2 function
